[gd_scene load_steps=3 format=3 uid="uid://d9e0f1g2h3i4j5"]

[ext_resource type="Script" path="res://scripts/settings_menu.gd" id="1_settings"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 48
font_color = Color(1, 0.9, 0.3, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.15, 0.25, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 30.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
text = "SETTINGS"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="MusicContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MusicContainer"]
layout_mode = 2
text = "MUSIC VOLUME"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MusicContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/MusicContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
step = 1.0
value = 70.0

[node name="ValueLabel" type="Label" parent="VBoxContainer/MusicContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "70%"
horizontal_alignment = 1

[node name="SFXContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/SFXContainer"]
layout_mode = 2
text = "SFX VOLUME"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/SFXContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SFXSlider" type="HSlider" parent="VBoxContainer/SFXContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
step = 1.0
value = 80.0

[node name="ValueLabel" type="Label" parent="VBoxContainer/SFXContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "80%"
horizontal_alignment = 1

[node name="ResetProgressButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "RESET PROGRESS"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -80.0
offset_right = 180.0
offset_bottom = -30.0
grow_vertical = 0
text = "‚Üê BACK"
